main/default/objects/Lead/fields/Company_Pursuit__c.field-meta.xml
<CustomField>
    <fullName>Company_Pursuit__c</fullName>
    <description>Company who is pursuing the lead as a client.</description>
    <inlineHelpText>Company who is pursuing the lead as a client.</inlineHelpText>
    <label>Company Pursuit</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>givebackRx</fullName>
            </value>
            <value>
                <fullName>Edera L3C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>