main/default/objects/Lead/fields/Compass_Contact_Reason__c.field-meta.xml
<CustomField>
    <fullName>Compass_Contact_Reason__c</fullName>
    <description>Compass list of solutions that we would want to track for contact us form on the Compass website</description>
    <label>Compass Contact Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Change Navigator</fullName>
            </value>
            <value>
                <fullName>Program Manager</fullName>
            </value>
            <value>
                <fullName>Agile Project Manager</fullName>
            </value>
            <value>
                <fullName>Connect</fullName>
            </value>
            <value>
                <fullName>Contact Center</fullName>
            </value>
            <value>
                <fullName>Insights</fullName>
            </value>
            <value>
                <fullName>Request a Demo</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>