main/default/objects/Lead/fields/How_can_we_help__c.field-meta.xml
<CustomField>
    <fullName>How_can_we_help__c</fullName>
    <inlineHelpText>Please let us know how we can help. We will assign the right person from our team to connect with you.</inlineHelpText>
    <label>How Can We Help?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>