main/default/objects/Lead/fields/NCC_Contact_Request_Reason__c.field-meta.xml
<CustomField>
    <fullName>NCC_Contact_Request_Reason__c</fullName>
    <inlineHelpText>Please select the reason for contacting the NCC.</inlineHelpText>
    <label>Contact Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Change Cloud</fullName>
            </value>
            <value>
                <fullName>Consulting Services (Clinical)</fullName>
            </value>
            <value>
                <fullName>Consulting Services (Revenue Cycle)</fullName>
            </value>
            <value>
                <fullName>givebackRx</fullName>
            </value>
            <value>
                <fullName>Join Our Speakers Bureau</fullName>
            </value>
            <value>
                <fullName>Book a Speaker for Your Event</fullName>
            </value>
            <value>
                <fullName>Partner With Us</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>