main/default/objects/Lead/fields/Referred_by__c.field-meta.xml
<CustomField>
    <fullName>Referred_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referred by</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Lead (Referrals)</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>