main/default/objects/Lead/fields/Referred_to_Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Referred_to_Job_Title__c</fullName>
    <label>Referred to Job Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>