main/default/objects/Lead/listViews/givebackRx_Health_Center_Leads.listView-meta.xml
<ListView>
    <fullName>givebackRx_Health_Center_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Company_Pursuit__c</field>
        <operation>equals</operation>
        <value>givebackRx</value>
    </filters>
    <label>givebackRx Health Center Leads</label>
</ListView>