main/default/objects/Lead/listViews/givebackRx_Non_Profit_Leads.listView-meta.xml
<ListView>
    <fullName>givebackRx_Non_Profit_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Company_Pursuit__c</field>
        <operation>equals</operation>
        <value>givebackRx</value>
    </filters>
    <filters>
        <field>LEAD.LAST_NAME</field>
        <operation>notContain</operation>
        <value>pharmacy</value>
    </filters>
    <label>givebackRx Non-Profit Leads</label>
</ListView>