main/default/objects/Lead/listViews/givebackRx_Pharmacy_Leads.listView-meta.xml
<ListView>
    <fullName>givebackRx_Pharmacy_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.CITY</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Company_Pursuit__c</field>
        <operation>equals</operation>
        <value>givebackRx</value>
    </filters>
    <filters>
        <field>LEAD.LAST_NAME</field>
        <operation>contains</operation>
        <value>Pharmacy</value>
    </filters>
    <filters>
        <field>LEAD.CITY</field>
        <operation>equals</operation>
        <value>Paso Robles,Atascadero,Templeton,San Luis Obispo</value>
    </filters>
    <label>givebackRx Pharmacy Leads</label>
</ListView>